# gcp-pmle-question-style-finetuning

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
data/: gcp-ml-engineer-sample.md  metadata-sample.jsonl  sft_dataset-sample.jsonl
docs/: devcontainer.md
src/: data_processing.py  fine_tuning.py  logger.py  prompts.py  schemas.py  settings.py  utils.py
