[tool.poetry]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
commitizen = "^4.8.3"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
pandas = "^2.3.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pydantic = "^2.11.7"

[tool.poetry.group.lint.dependencies]
ruff = "^0.11.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"